--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,11 +8,11 @@ services:
     volumes:
       - "/etc/localtime:/etc/localtime:ro"
       - "/etc/timezone:/etc/timezone:ro"
-      - "openhab_addons:/openhab/addons"
-      - "openhab_conf:/openhab/conf"
-      - "openhab_userdata:/openhab/userdata"
+      - "./config/openhab/addons:/openhab/addons"
+      - "./config/openhab/conf:/openhab/conf"
+      - "./config/openhab/userdata:/openhab/userdata"
     environment:
       OPENHAB_HTTP_PORT: "8080"
       OPENHAB_HTTPS_PORT: "8443"
 
-    
+
